--- a/course3/assignments/web/templates/posts.html
+++ b/course3/assignments/web/templates/posts.html
@@ -1,8 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="/static/style.css">
+</head>
+
+<body>
+
+<h1>Welcome to Alice's Blog!!</h1>
+
+<p>I'm new to this so be patient. Maybe I'll put panda news here...stay tuned.</p>
+
+<img src="/static/panda.gif" alt= "Panda">
+
+<p>
 {% for post in posts %}
+    <p>
     <a href="{{ url_for('post', name=post.path.replace('posts/', '')) }}">
-        {{ post.title }}
-    </a>
+        {{ post.title }}</a>
     <small>{{ post.date }}</small>
+    </p>
 {% endfor %}
-
-
+<p>
+</body>
+</html>
